# mindex

./: .dockerignore  .env.example  .gitignore  .mindex  .sqlfluff  Cargo.toml  Dockerfile  README.md  TODO.md  config.example.toml  docker-compose.exposed.yml  docker-compose.test.yml  docker-compose.yml  rust-toolchain.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: verify.md
embedder/: README.md  pyproject.toml
embedder/src/bge_m3_api/: __main__.py
perf/: .gitignore  README.md  analyze.ipynb  index_load.js  plot.sh  run.sh
perf/corpus/: fetch.sh  repos.txt
perf/env/: baseline.env  big-batch.env  high-concurrency.env
scripts/: entrypoint.sh
src/: backend.rs  config.rs  db.rs  embed.rs  main.rs  models.rs  worker.rs
src/backend/: error.rs  extract.rs  http3.rs  openapi.rs  v0.rs
src/backend/v0/: handlers.rs  models.rs  validate.rs
src/db/: files.rs  qdrant.rs  sqlite3.rs
src/db/migrations/: v0.1.0_schema.sql  v0.2.0_status_machine.sql  v0.3.0_validation_checks.sql
src/models/: bge_m3.rs
src/slicing/: traits.rs
src/worker/: gc.rs  retry.rs
tests/integration/: Dockerfile  conftest.py  mindex-test-config.toml  test_cancel.py  test_concurrency.py  test_drift.py  test_e2e.py  test_filters_and_languages.py  test_management.py  test_validation.py
tests/mock_embedder/: Dockerfile  main.py
tools/digest/: README.md  pyproject.toml
tools/digest/src/mindex_digest/: __init__.py  server.py
tools/hooks/: README.md  post-commit
tools/indexer/: Cargo.toml  indexer.example.toml
tools/indexer/src/: client.rs  config.rs  main.rs  scanner.rs
tools/mcp/: README.md  pyproject.toml
tools/mcp/mindex/: README.md  pyproject.toml
tools/mcp/mindex/src/mindex/: server.py
tools/mcp/scout/: README.md  pyproject.toml
tools/mcp/scout/src/scout/: __init__.py  server.py
tools/mcp/src/mindex_mcp/: __init__.py  server.py
tools/search/: mindex-search  mindex-search-edit  mindex-search.sh
tools/vscode/: .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
tools/vscode/src/: api.ts  driftView.ts  errors.ts  extension.ts  indexer.ts  languages.ts  mindexFile.ts  scanner.ts  search.ts  statusView.ts
tools/watcher/: Cargo.toml  watcher.example.toml
tools/watcher/src/: client.rs  config.rs  main.rs  mindex_file.rs  scanner.rs  watcher.rs
