[tool.poetry]
name = "bge-m3-api"
version = "0.1.0"
description = "API для BGE-M3 с поддержкой ROCm"
authors = ["Silence Speaks Truth <dev@null.local>"]
packages = [{include = "bge_m3_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.48.0"}
FlagEmbedding = "^1.4.0"
transformers = ">=4.40.0"
accelerate = ">=0.30.0"
torch = ">=2.12.0"
orjson = "^3.11.9"

[[tool.poetry.source]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2" # ROCm 6.2 более стабилен, чем 7.2.3
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"