[tool.poetry]
name = "bge-m3-api"
version = "0.1.0"
description = "API для BGE-M3 с поддержкой ROCm"
authors = ["Silence Speaks Truth <dev@null.local>"]
packages = [{include = "bge_m3_api", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.136.3"
uvicorn = {extras = ["standard"], version = "^0.48.0"}
FlagEmbedding = "^1.4.0"
transformers = ">=4.40.0"
accelerate = ">=0.30.0"
orjson = "^3.11.9"
# NOTE: torch is intentionally NOT declared here. It arrives transitively via
# FlagEmbedding as a build-agnostic default; pick the accelerator build (ROCm /
# CUDA / CPU) yourself after `poetry install` — see README ("GPU / torch build").

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
