[package]
name = "mindex-index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
console    = "0.15"
globset    = "0.4"
hex        = "0.4"
indicatif  = "0.17"
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
tokio      = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml       = "0.9"
walkdir    = "2"
