[package]
name    = "mindex-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = "1"
clap               = { version = "4", features = ["derive"] }
globset            = "0.4"
hex                = "0.4"
notify             = "6"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sha2               = "0.10"
tokio              = { version = "1", features = ["full"] }
tokio-util         = "0.7"
toml               = "0.9"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir            = "2"

[dev-dependencies]
tempfile = "3"
