[tool.poetry]
name = "mindex"
version = "0.1.0"
description = "MCP-сервер: прямой доступ к индексу mindex (поиск + обслуживание)"
authors = ["Silence Speaks Truth <dev@null.local>"]
packages = [{include = "mindex", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
mcp = ">=1.2"
httpx = ">=0.27"

[tool.poetry.scripts]
mindex = "mindex.server:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
