[tool.poetry]
name = "scout"
version = "0.1.0"
description = "MCP-сервер scout: разложенные запросы → поиск в mindex → выжимка локальной LLM (Ollama)"
authors = ["Silence Speaks Truth <dev@null.local>"]
packages = [{include = "scout", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
mcp = ">=1.2"
httpx = ">=0.27"

[tool.poetry.scripts]
scout = "scout.server:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
